--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,30 @@
-requests>=2.25.1
-beautifulsoup4>=4.9.3
-lxml>=4.6.3
-urllib3>=1.26.5 
+annotated-types==0.7.0
+anyio==4.9.0
+asyncio==3.4.3
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+distro==1.9.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jiter==0.10.0
+lxml==6.0.0
+openai==1.93.1
+pyaes==1.6.1
+pyasn1==0.6.1
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyPDF2==3.0.1
+python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.3
+rsa==4.9.1
+sniffio==1.3.1
+soupsieve==2.6
+Telethon==1.40.0
+tqdm==4.67.1
+typing-inspection==0.4.1
+typing_extensions==4.13.0
+urllib3==2.3.0
